--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,17 @@
 {
-  "domain": "seventeentrack",
-  "name": "17TRACK",
-  "codeowners": ["@shaiu"],
-  "config_flow": true,
+  "domain": "seventeentrack_custom",
+  "name": "17TRACK Custom",
+  "version": "1.0.0",
   "documentation": "https://www.home-assistant.io/integrations/seventeentrack",
-  "integration_type": "service",
+  "requirements": [
+    "py17track==2021.12.2"
+  ],
+  "codeowners": [
+    "@ton-github-username"
+  ],
   "iot_class": "cloud_polling",
-  "loggers": ["pyseventeentrack"],
-  "requirements": ["pyseventeentrack==1.1.1"]
+  "loggers": [
+    "py17track"
+  ],
+  "integration_type": "service"
 }
