--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
   "domain": "seventeentrack_custom",
   "name": "17TRACK Custom",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "documentation": "https://www.home-assistant.io/integrations/seventeentrack",
   "issue_tracker": "https://github.com/OUARZA/ha-seventeentrack-custom/issues",
-  "requirements": [
-    "py17track==2021.12.2"
-  ],
+  "requirements": [],
   "codeowners": [
     "@OUARZA"
   ],
   "iot_class": "cloud_polling",
   "loggers": [
-    "py17track"
+    "custom_components.seventeentrack_custom"
   ],
-  "integration_type": "service"
+  "integration_type": "service",
+  "config_flow": true
 }
